--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.btn{
+  padding: 20px 40px;
+  background-color: indianred;
+  color: #fff;
+  border-radius: 5px;
+}
